# lab-tools

./: .gitignore  Makefile  docker-compose.yml
.do/: app.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: cell_count.py
backend/app/routers/: cell_count.py  feedback.py  upload.py
backend/app/services/: cell_count.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  router.tsx
frontend/src/components/: FeedbackWidget.tsx  MagnifierImage.tsx  Sidebar.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CellCountPage.tsx  HomePage.tsx
